Update Orval config
